# marimo-wasm

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  notebook.py  pyproject.toml
.github/workflows/: deploy.yaml  python-test.yaml
