[project]
name = "marimo-wasm"
version = "0.1.0"
readme = "README.md"
authors = [
    { name = "Karn Wong", email = "karn@karnwong.me" }
]
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "lxml>=6.0.1",
    "marimo>=0.15.0",
    "matplotlib>=3.10.5",
    "pandas>=2.3.2",
    "pydantic>=2.11.7",
    "requests>=2.32.5",
]
